--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,19 @@
 cmake_minimum_required(VERSION 3.14)
 
+if(MSVC)
+	add_compile_options("/std:c++17")
+else()
+	set(CMAKE_CXX_STANDARD_REQUIRED 17)
+endif()
+
 option(SFML_snake "build SFML snake" off)
 option(OPENGL_snake "build OPENGL snake" off)
 option(Qt_snake "build Qt snake" off)
 option(char_snake "build char snake" on)
 
 
-add_subdirectory(./core)
+aux_source_directory(${PROJECT_SOURCE_DIR}/core/src core_src)
+set(headers ${PROJECT_SOURCE_DIR}/core/include)
 
 
 if(SFML_snake)
