--- a/SFML/CMakeLists.txt
+++ b/SFML/CMakeLists.txt
@@ -10,3 +10,7 @@ target_include_directories(SFML_snake PRIVATE include)
 target_include_directories(SFML_snake PUBLIC ${headers})
 
 target_link_libraries(SFML_snake sfml-graphics sfml-audio)
+
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    target_link_libraries(SFML_snake pthread)
+endif()
