--- a/char/CMakeLists.txt
+++ b/char/CMakeLists.txt
@@ -6,3 +6,7 @@ add_executable(char_snake ${char_snake_src} ${core_src})
 
 target_include_directories(char_snake PRIVATE include)
 target_include_directories(char_snake PUBLIC ${headers})
+
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    target_link_libraries(char_snake PRIVATE pthread)
+endif()
